- Fix render loop with incorrect fred-target combination