@@ -3,7 +3,7 @@
   "lowCaseName": "fred",
   "description": "Frontend Editor",
   "author": "John Peca",
-  "version": "2.2.1-pl",
+  "version": "2.2.2-pl",
   "menus": [
     {
       "text": "fred.menu.fred",
